--- a/src/layouts/PageGridLayout/PageGridLayout.module.css
+++ b/src/layouts/PageGridLayout/PageGridLayout.module.css
@@ -30,7 +30,8 @@
   .container {
     background: #EBEDF0;
     min-height: 0;
-    padding: 0
+    padding: 8px 0 0 0;
+    /* min-height: 90vh; */
   }
 
   .grid-container {
