--- a/src/pages/profile/[profile_url]/styles.module.css
+++ b/src/pages/profile/[profile_url]/styles.module.css
@@ -287,7 +287,7 @@ width: 100%;
 
 @media screen and (max-width: 1100px) {
   .main-media {
-    margin-top: 8px;
+    /* margin-top: 8px; */
     gap: 8px;
   }
   .medias {
@@ -342,7 +342,7 @@ width: 100%;
     padding: 0;
   }
   .no-posts-div{
-    margin-top: 8px;
+    /* margin-top: 8px; */
     border-radius: 0;
   }
   .profile-left-aside{
