--- a/src/styles/ProfileListingPage.module.css
+++ b/src/styles/ProfileListingPage.module.css
@@ -196,7 +196,7 @@ ul.contact-wrapper svg {
     position: static;
   }
   .add-event{ 
-    margin-top: 8px;
+    /* margin-top: 8px; */
     height: 88px;
     border-radius: 0;
   }
